Don't hide the argument name inside for block in AirIteratedRegisterCoalescing.cpp https://bugs.webkit.org/show_bug.cgi?id=151622

Reviewed by Darin Adler.

* b3/air/AirIteratedRegisterCoalescing.cpp:
(JSC::B3::Air::IteratedRegisterCoalescingAllocator::addEdges):


Canonical link: https://commits.webkit.org/169823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192873 268f45cc-cd09-0410-ab3c-d52691b4dbfc